2007-05-16  Eitan Isaacson  <eitan@ascender.com>

	* plugins/console.py: Epydoced.
	* plugins/ipython_view.py: Epydoced.
	* plugins/script_recorder.py: Epydoced.
	
	* plugins/api_view.py: Epydoced.
	* plugins/event_monitor.glade: Reattached signals that got lost.
	* plugins/event_monitor.py:  Epydoced.
	* src/lib/accerciser/pyatspi.zip: Updated to revision 927.

2007-05-15  Eitan Isaacson  <eitan@ascender.com>
	
	* plugins/interface_view.py: Epydoced.
	
	* plugins/event_monitor.glade:
	* plugins/event_monitor.py: Fixed event filtering (bug 438622).

2007-05-14  Eitan Isaacson  <eitan@ascender.com>

	* README: Bumped to version 0.1.3
	* configure.in: Bumped to version 0.1.3
	* debian/changelog: Bumped to version 0.1.3
	* help/C/accerciser.xml: Changed console example to pyatspi (bug 438056)

2007-05-10  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/pyatspi.zip: Updated to revision 925.

2007-05-10  Eitan Isaacson  <eitan@ascender.com>

	* README: Updated requirements. Added requirements for Debian
	based machines.
	
	* src/lib/accerciser/pyatspi.zip: Updated to revision 924.
	
	* NEWS: Added entry for 0.1.2.
	* pixmaps/Makefile.am:
	* pixmaps/alert.png:
	* pixmaps/column.png:
	* pixmaps/desktopframe.png:
	* pixmaps/directorypane.png:
	* pixmaps/embedded.png:
	* pixmaps/endnote.png:
	* pixmaps/htmlcontainer.png:
	* pixmaps/label.png:
	* pixmaps/link.png:
	* pixmaps/outlineitem.png:
	* pixmaps/pagetab.png:
	* pixmaps/passwordtext.png:
	* pixmaps/row.png:
	* pixmaps/section.png:
	* pixmaps/shape.png:
	* pixmaps/tablecell.png: Tweaked icons.

2007-05-09  Eitan Isaacson  <eitan@ascender.com>

	* NOTICE: Added copyright notice for role icons.
	* pixmaps/Makefile.am: 
	* pixmaps/acceleratorlabel.png:
	* pixmaps/arrow.png:
	* pixmaps/calendar.png:
	* pixmaps/canvas.png:
	* pixmaps/chart.png:
	* pixmaps/checkbox.png:
	* pixmaps/checkmenuitem.png:
	* pixmaps/colorchooser.png:
	* pixmaps/combobox.png:
	* pixmaps/dateeditor.png:
	* pixmaps/desktopicon.png: