@@ -1,3 +1,8 @@
+2007-05-17  Eitan Isaacson  <eitan@ascender.com>
+
+	* src/lib/accerciser/plugin.py: Epydoced.
+	* src/lib/accerciser/tools.py: Epydoced, removed unused Proxy class.
+
 2007-05-16  Eitan Isaacson  <eitan@ascender.com>
 
 	* plugins/console.py: Epydoced.
